--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
+    "build": "turbo build",
     "dev": "turbo dev"
   },
   "devDependencies": {
