--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "11.0.0-rc.666",
+    "@trpc/server": "11.0.0-rc.666",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.3",
