--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
     "@trpc/client": "11.0.0-rc.666",
+    "@trpc/next": "11.0.0-rc.666",
+    "@trpc/react-query": "11.0.0-rc.666",
     "@trpc/server": "11.0.0-rc.666",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
