--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev": "turbo dev"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^3.2.5",
