--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dudykr/trustable-webapp",
+  "name": "@dudykr/tpp-webapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
