--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.3",
     "embla-carousel-react": "^8.5.1",
+    "eslint-config-custom": "workspace:^",
     "firebase": "^11.1.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
