--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "^8.5.1",
     "eslint-config-custom": "workspace:^",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.1-canary.19",
