--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -54,9 +54,10 @@
     "embla-carousel-react": "^8.5.1",
     "eslint-config-custom": "workspace:^",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
-    "next": "15.1.1-canary.19",
+    "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
@@ -73,17 +74,17 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^22.10.2",
     "@types/pg": "^8.11.10",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.1-canary.19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
